Change to Constructor#newInstance from Class#newInstance Because Class#newInstance was deprecated since JDK 9+.